# flexbot_capstone

./: .gitignore  README.md  arm.py  init_bot.sh  stop.py  test.txt
BAT/: battery.cpp  battery_monitor
IMU/: imu_euler_only.py  imu_to_lcd.py
LCD/: lcd_status  lcd_status.cpp  lcd_test.cpp  lcd_test.py
LED/: led_sequence.py
MOTORS/: differential_drive_test.py  init_left_motor  init_left_motor.cpp  init_right_motor  ping_motors.py  speed_test.py
PGV/: pgv.cpp  pgv.py  pgv_rx.cpp  pgv_tx.cpp
UDP/: arming.cpp  drive_i7.py  drive_jet.py  imu_udp_rx  imu_udp_tx  imu_udp_tx.cpp  init_motors.sh  motor_controller  motor_controller.cpp  start_comm.sh  stop.py  udp_cmd_client  udp_cmd_client.cpp  udp_cmd_server  udp_cmd_server.cpp
can_logs/: left_1.trc
src/flex_bot_bringup/: package.xml  setup.cfg  setup.py
src/flex_bot_bringup/config/: ekf_imu.yaml  slam_config.yaml
src/flex_bot_bringup/launch/: bringup_full.launch.py  bringup_sensors.launch.py  bringup_state_estimation.launch.py  foxglove.launch.py  slam_async.launch.py  static_tfs.launch.py
src/flex_bot_bringup/rviz/: bringup.rviz
src/flex_bot_odometry/: CMakeLists.txt  package.xml
src/flex_bot_odometry/config/: wheel_odom.yaml
src/flex_bot_odometry/scripts/: odom_to_path.py
src/flex_bot_odometry/src/: wheel_odom_node.cpp
src/flex_bot_teleop/: CMakeLists.txt  package.xml
src/flex_bot_teleop/config/: flex_bot_udp.yaml  teleop.yaml
src/flex_bot_teleop/launch/: flex_bot.launch.py
src/flex_bot_teleop/src/: teleop_node.cpp  udp_bridge_node.cpp
src/launch/: flexbot.launch.py
(+1 files in other folders)
